fix: text should remain visibile during webfont load.

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,7 +17,7 @@ body {
   margin: 0;
   padding: 0;
   color: $color-dark-3;
-  font-family: $font;
+  font-family: $font, sans-serif;
 }
 
 img {
